kubernetes/apps/obsidian/obsidian-web/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.brauni.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: obsidian-web-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: obsidian-web
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - X-Forwarded-Uri
      - accept
      - authorization
      - cookie
      - user-agent
    http:
      backendRefs:
        - name: tinyauth-brauni-dev
          namespace: network
          port: 3000
      path: /api/auth/envoy?path=
      headersToBackend:
        - Location
        - Set-Cookie
